--- a/cozy-organizer/package.json
+++ b/cozy-organizer/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@fontsource/libre-baskerville": "^5.2.10",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "fs-extra": "^11.3.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.14.1"
